# pitlane-attest

./: .gitignore  .ruff.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/telemetry/: demo-arm-pick.json  demo-drive-loop.json  demo-sim-inspect.json
src/pitlane_attest/: cli.py  crypto.py  io.py  models.py
src/pitlane_attest/viewer/static/: app.js  index.html  styles.css
tests/: test_attest_roundtrip.py  test_crypto.py
